--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
         <title>Code to win with AnsMann</title>
         <link rel="stylesheet" href="css/bootstrap.css">
     </head>
-    <body>
-        Hallo
+    <body class="container">
+        <header class="d flex border row">
+            <h1 class="border flex-grow-1">Ansgar Reimann</h1>
+            <div class="border">
+                <a class="mr-3" href="#">Kontakt</a>
+                <a href="#">Biografie</a>
+            </div>
+        </header>
+
     </body>
 </html>
