--- a/index.html
+++ b/index.html
@@ -8,13 +8,75 @@
         <link rel="stylesheet" href="css/bootstrap.css">
     </head>
     <body class="container">
-        <header class="d flex border row">
-            <h1 class="border flex-grow-1">Ansgar Reimann</h1>
-            <div class="border">
+        <header class="mb-5 d flex row">
+            <h1 class="flex-grow-1">Ansgar Reimann</h1>
+            <div>
                 <a class="mr-3" href="#">Kontakt</a>
                 <a href="#">Biografie</a>
             </div>
         </header>
-
+        <section class="mb-3">
+            <img class="mb-3" src="https://via.placeholder.com/250" alt="Bild
+                von mir">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi
+                nulla mollitia obcaecati consequuntur aliquam commodi delectus!
+                Ab eaque reiciendis ratione vel voluptas, natus nulla
+                consequuntur delectus sunt, neque numquam soluta?</p>
+        </section>
+        <h2>Programmierskills</h2>
+        <section class="mb-3">
+            <div class="badge badge-primary">Skill 1</div>
+            <div class="badge badge-primary">Skill 2</div>
+            <div class="badge badge-primary">Skill 3</div>
+            <div class="badge badge-primary">Skill 4</div>
+            <div class="badge badge-primary">Skill 5</div>
+        </section>
+        <h2>Weitere Skills</h2>
+        <section class="mb-3">
+            <div class="badge badge-success">Weiterer Skill 1</div>
+            <div class="badge badge-success">Weiterer Skill 2</div>
+            <div class="badge badge-success">Weiterer Skill 3</div>
+            <div class="badge badge-success">Weiterer Skill 4</div>
+            <div class="badge badge-success">Weiterer Skill 5</div>
+        </section>
+        <section class="border border-dark rounded p-2 mb-3">
+            <h3>Telefon:</h3>
+            <div class="mb-2">0151/24062234</div>
+            <h3>E-Mail:</h3>
+            <a href="mailto:ansgar.reimann@protonmail.com">ansgar.reimann@protonmail.com</a>
+        </section>
+        <section class="d-flex justify-content-between row mb-3 p-2">
+            <figure>
+                <a class="border" href="https://google.com"><img
+                        src="https://via.placeholder.com/200"
+                        alt="github"></a>
+                <figcaption><a href="#">See my GitHub</a></figcaption>
+            </figure>
+            <figure><a href="#"><img src="https://via.placeholder.com/200"
+                        alt="Codepen"></a>
+                <figcaption><a href="#">See my CodePen</a></figcaption>
+            </figure>
+            <figure><a href="#"><img src="https://via.placeholder.com/200"
+                        alt="LinkedIn"></a>
+                <figcaption><a href="#">See my LinkedIn</a></figcaption>
+            </figure>
+        </section>
+        <h2>About me</h2>
+        <section class="mb-3">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
+                magnam consequatur enim voluptates aliquam magni assumenda,
+                eligendi suscipit consequuntur repudiandae recusandae quia.
+                Recusandae esse ex consequuntur earum officia mollitia fugiat.</p>
+        </section>
+        <h2>Curriculum Vitae</h2>
+        <section>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">Station 1</li>
+                <li class="list-group-item">Station 2</li>
+                <li class="list-group-item">Station 3</li>
+                <li class="list-group-item">Station 4</li>
+                <li class="list-group-item">Station 5</li>
+            </ul>
+        </section>
     </body>
 </html>
