--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
         <link rel="stylesheet" href="css/bootstrap.css">
     </head>
     <body class="container">
-        <header class="mb-5 d flex row">
+        <header class="mb-5 d-flex row p-3">
             <h1 class="flex-grow-1">Ansgar Reimann</h1>
             <div>
-                <a class="mr-3" href="#">Kontakt</a>
-                <a href="#">Biografie</a>
+                <a class="mr-3"
+                    href="http://127.0.0.1:5500/index.html#contact">Kontakt</a>
+                <a href="http://127.0.0.1:5500/index.html#aboutme">Biografie</a>
             </div>
         </header>
-        <section class="mb-3">
+        <section id="start" class="mb-3">
             <img class="mb-3" src="https://via.placeholder.com/250" alt="Bild
                 von mir">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi
@@ -23,29 +24,34 @@
                 Ab eaque reiciendis ratione vel voluptas, natus nulla
                 consequuntur delectus sunt, neque numquam soluta?</p>
         </section>
-        <h2>Programmierskills</h2>
-        <section class="mb-3">
-            <div class="badge badge-primary">Skill 1</div>
-            <div class="badge badge-primary">Skill 2</div>
-            <div class="badge badge-primary">Skill 3</div>
-            <div class="badge badge-primary">Skill 4</div>
-            <div class="badge badge-primary">Skill 5</div>
-        </section>
-        <h2>Weitere Skills</h2>
-        <section class="mb-3">
-            <div class="badge badge-success">Weiterer Skill 1</div>
-            <div class="badge badge-success">Weiterer Skill 2</div>
-            <div class="badge badge-success">Weiterer Skill 3</div>
-            <div class="badge badge-success">Weiterer Skill 4</div>
-            <div class="badge badge-success">Weiterer Skill 5</div>
-        </section>
-        <section class="border border-dark rounded p-2 mb-3">
+        <h2 id="skills1">Programmierskills</h2>
+        <list class="mb-3 d-flex align-content-start">
+            <ul class="list-group
+                list-group-horizontal-sm">
+                <li class="badge list-group-item-primary m-1">Skill 1</li>
+                <li class="badge list-group-item-primary m-1">Skill 2</li>
+                <li class="badge list-group-item-primary m-1">Skill 3</li>
+                <li class="badge list-group-item-primary m-1">Skill 4</li>
+                <li class="badge list-group-item-primary m-1">Skill 5</li>
+            </ul>
+        </list>
+        <h2 id="skills2">Weitere Skills</h2>
+        <list class="mb-3 mb-3 d-flex align-content-start">
+            <ul class="class list-group list-group-horizontal-sm">
+                <li class="badge badge-success m-1">Weiterer Skill 1</li>
+                <li class="badge badge-success m-1">Weiterer Skill 2</li>
+                <li class="badge badge-success m-1">Weiterer Skill 3</li>
+                <li class="badge badge-success m-1">Weiterer Skill 4</li>
+                <li class="badge badge-success m-1">Weiterer Skill 5</li>
+            </ul>
+        </list>
+        <section id="contact" class="border border-dark rounded p-2 mb-3">
             <h3>Telefon:</h3>
             <div class="mb-2">0151/24062234</div>
             <h3>E-Mail:</h3>
             <a href="mailto:ansgar.reimann@protonmail.com">ansgar.reimann@protonmail.com</a>
         </section>
-        <section class="d-flex justify-content-between row mb-3 p-2">
+        <section id="teaser" class="d-flex justify-content-around row mb-3 p-3">
             <figure>
                 <a class="border" href="https://google.com"><img
                         src="https://via.placeholder.com/200"
@@ -61,14 +67,14 @@
                 <figcaption><a href="#">See my LinkedIn</a></figcaption>
             </figure>
         </section>
-        <h2>About me</h2>
+        <h2 id="aboutme">About me</h2>
         <section class="mb-3">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
                 magnam consequatur enim voluptates aliquam magni assumenda,
                 eligendi suscipit consequuntur repudiandae recusandae quia.
                 Recusandae esse ex consequuntur earum officia mollitia fugiat.</p>
         </section>
-        <h2>Curriculum Vitae</h2>
+        <h2 id="cv">Curriculum Vitae</h2>
         <section>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">Station 1</li>
