skills list update

--- a/index.html
+++ b/index.html
@@ -24,25 +24,36 @@
                 Ab eaque reiciendis ratione vel voluptas, natus nulla
                 consequuntur delectus sunt, neque numquam soluta?</p>
         </section>
+        <!--durch row ist es nicht gleich eingerückt wie rest-->
         <h2 id="skills1">Programmierskills</h2>
-        <list class="mb-3 d-flex align-content-start">
-            <ul class="list-group
-                list-group-horizontal-sm">
-                <li class="badge list-group-item-primary m-1">Skill 1</li>
-                <li class="badge list-group-item-primary m-1">Skill 2</li>
-                <li class="badge list-group-item-primary m-1">Skill 3</li>
-                <li class="badge list-group-item-primary m-1">Skill 4</li>
-                <li class="badge list-group-item-primary m-1">Skill 5</li>
+        <list class="mb-3 d-flex">
+            <ul class="row list-group d-flex
+                list-group-horizontal">
+                <li class="badge list-inline-item list-group-item-primary m-1">Skill
+                    1</li>
+                <li class="badge list-inline-item list-group-item-primary m-1">Skill
+                    2</li>
+                <li class="badge list-inline-item list-group-item-primary m-1">Skill
+                    3</li>
+                <li class="badge list-inline-item list-group-item-primary m-1">Skill
+                    4</li>
+                <li class="badge list-group-item-primary
+                    m-1">Skill 5</li>
             </ul>
         </list>
         <h2 id="skills2">Weitere Skills</h2>
-        <list class="mb-3 mb-3 d-flex align-content-start">
-            <ul class="class list-group list-group-horizontal-sm">
-                <li class="badge badge-success m-1">Weiterer Skill 1</li>
-                <li class="badge badge-success m-1">Weiterer Skill 2</li>
-                <li class="badge badge-success m-1">Weiterer Skill 3</li>
-                <li class="badge badge-success m-1">Weiterer Skill 4</li>
-                <li class="badge badge-success m-1">Weiterer Skill 5</li>
+        <list class="mb-3 d-flex">
+            <ul class="row class list-group list-group-horizontal">
+                <li class="badge list-inline-item list-group-item-success m-1">Weiterer
+                    Skill 1</li>
+                <li class="badge list-inline-item list-group-item-success m-1">Weiterer
+                    Skill 2</li>
+                <li class="badge list-inline-item list-group-item-success m-1">Weiterer
+                    Skill 3</li>
+                <li class="badge list-inline-item list-group-item-success m-1">Weiterer
+                    Skill 4</li>
+                <li class="badge list-inline-item list-group-item-success m-1">Weiterer
+                    Skill 5</li>
             </ul>
         </list>
         <section id="contact" class="border border-dark rounded p-2 mb-3">
@@ -51,9 +62,10 @@
             <h3>E-Mail:</h3>
             <a href="mailto:ansgar.reimann@protonmail.com">ansgar.reimann@protonmail.com</a>
         </section>
-        <section id="teaser" class="d-flex justify-content-around row mb-3 p-3">
+        <section id="teaser" class="d-flex justify-content-around row
+            mb-3 p-3">
             <figure>
-                <a class="border" href="https://google.com"><img
+                <a href="https://google.com"><img
                         src="https://via.placeholder.com/200"
                         alt="github"></a>
                 <figcaption><a href="#">See my GitHub</a></figcaption>
