--- a/index.html
+++ b/index.html
@@ -16,51 +16,77 @@
                 <a href="http://127.0.0.1:5500/index.html#aboutme">Biografie</a>
             </div>
         </header>
-        <section id="start" class="mb-3">
-            <img class="mb-3" src="https://via.placeholder.com/250" alt="Bild
-                von mir">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi
-                nulla mollitia obcaecati consequuntur aliquam commodi delectus!
-                Ab eaque reiciendis ratione vel voluptas, natus nulla
-                consequuntur delectus sunt, neque numquam soluta?</p>
-        </section>
-        <!--durch row ist es nicht gleich eingerückt wie rest-->
-        <h2 id="skills1">Programmierskills</h2>
-        <list class="mb-3 d-flex">
-            <ul class="row list-group d-flex
-                list-group-horizontal">
-                <li class="badge list-inline-item list-group-item-primary m-1">Skill
-                    1</li>
-                <li class="badge list-inline-item list-group-item-primary m-1">Skill
-                    2</li>
-                <li class="badge list-inline-item list-group-item-primary m-1">Skill
-                    3</li>
-                <li class="badge list-inline-item list-group-item-primary m-1">Skill
-                    4</li>
-                <li class="badge list-group-item-primary
-                    m-1">Skill 5</li>
-            </ul>
-        </list>
-        <h2 id="skills2">Weitere Skills</h2>
-        <list class="mb-3 d-flex">
-            <ul class="row class list-group list-group-horizontal">
-                <li class="badge list-inline-item list-group-item-success m-1">Weiterer
-                    Skill 1</li>
-                <li class="badge list-inline-item list-group-item-success m-1">Weiterer
-                    Skill 2</li>
-                <li class="badge list-inline-item list-group-item-success m-1">Weiterer
-                    Skill 3</li>
-                <li class="badge list-inline-item list-group-item-success m-1">Weiterer
-                    Skill 4</li>
-                <li class="badge list-inline-item list-group-item-success m-1">Weiterer
-                    Skill 5</li>
-            </ul>
-        </list>
+        <div class="row">
+            <div class="col-sm">
+                <section id="start" class="mb-3">
+                    <img class="mb-3" src="https://via.placeholder.com/250"
+                        alt="Bild
+                        von mir">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                        Animi
+                        nulla mollitia obcaecati consequuntur aliquam commodi
+                        delectus!
+                        Ab eaque reiciendis ratione vel voluptas, natus nulla
+                        consequuntur delectus sunt, neque numquam soluta?</p>
+                </section>
+            </div>
+            <!--durch row ist es nicht gleich eingerückt wie rest-->
+            <div class="col-sm">
+                <h2 id="skills1">Programmierskills</h2>
+                <list class="mb-3 d-flex">
+                    <ul class="row list-group d-flex
+                        list-group-horizontal">
+                        <li class="badge list-inline-item
+                            list-group-item-primary m-1">Skill
+                            1</li>
+                        <li class="badge list-inline-item
+                            list-group-item-primary m-1">Skill
+                            2</li>
+                        <li class="badge list-inline-item
+                            list-group-item-primary m-1">Skill
+                            3</li>
+                        <li class="badge list-inline-item
+                            list-group-item-primary m-1">Skill
+                            4</li>
+                        <li class="badge list-group-item-primary
+                            m-1">Skill 5</li>
+                    </ul>
+                </list>
+                <h2 id="skills2">Weitere Skills</h2>
+                <list class="mb-3 d-flex">
+                    <ul class="row class list-group list-group-horizontal">
+                        <li class="badge list-inline-item
+                            list-group-item-success m-1">Weiterer
+                            Skill 1</li>
+                        <li class="badge list-inline-item
+                            list-group-item-success m-1">Weiterer
+                            Skill 2</li>
+                        <li class="badge list-inline-item
+                            list-group-item-success m-1">Weiterer
+                            Skill 3</li>
+                        <li class="badge list-inline-item
+                            list-group-item-success m-1">Weiterer
+                            Skill 4</li>
+                        <li class="badge list-inline-item
+                            list-group-item-success m-1">Weiterer
+                            Skill 5</li>
+                    </ul>
+                </list>
+            </div>
+        </div>
         <section id="contact" class="border border-dark rounded p-2 mb-3">
-            <h3>Telefon:</h3>
-            <div class="mb-2">0151/24062234</div>
-            <h3>E-Mail:</h3>
-            <a href="mailto:ansgar.reimann@protonmail.com">ansgar.reimann@protonmail.com</a>
+            <div class="row d-flex justify-content-between">
+                <div class="col-sm col-md-4 text-truncate">
+                    <h3 class="h5">Telefon:</h3>
+                    <div class="mb-2">0151/24062234</div>
+                </div>
+                <div class="col-sm col-md-4 text-truncate">
+                    <h3 class="h5">E-Mail:</h3>
+                    <a href="mailto:ansgar.reimann@protonmail.com">
+                        ansgar.reimann@protonmail.com
+                    </a>
+                </div>
+            </div>
         </section>
         <section id="teaser" class="d-flex justify-content-around row
             mb-3 p-3">
