--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Code to win with AnsMann</title>
         <link rel="stylesheet" href="css/bootstrap.css">
     </head>
-    <body class="container">
+    <body class="bg-success container">
         <header class="mb-5 d-flex row p-3">
             <h1 class="flex-grow-1">Ansgar Reimann</h1>
             <div>
@@ -105,22 +105,34 @@
                 <figcaption><a href="#">See my LinkedIn</a></figcaption>
             </figure>
         </section>
-        <h2 id="aboutme">About me</h2>
-        <section class="mb-3">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
-                magnam consequatur enim voluptates aliquam magni assumenda,
-                eligendi suscipit consequuntur repudiandae recusandae quia.
-                Recusandae esse ex consequuntur earum officia mollitia fugiat.</p>
-        </section>
-        <h2 id="cv">Curriculum Vitae</h2>
-        <section>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">Station 1</li>
-                <li class="list-group-item">Station 2</li>
-                <li class="list-group-item">Station 3</li>
-                <li class="list-group-item">Station 4</li>
-                <li class="list-group-item">Station 5</li>
-            </ul>
-        </section>
+        <div class="row">
+            <div class="col-sm">
+                <h2 id="aboutme">About me</h2>
+                <section class="mb-3">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Commodi
+                        magnam consequatur enim voluptates aliquam magni
+                        assumenda,
+                        eligendi suscipit consequuntur repudiandae recusandae
+                        quia.
+                        Recusandae esse ex consequuntur earum officia mollitia
+                        fugiat.</p>
+                </section>
+            </div>
+            <div class="col-sm">
+                <h2 id="cv">Curriculum Vitae</h2>
+                <list>
+                    <ul class="list-group list-group-flush mb-3">
+                        <li class="bg-danger list-group-item">Station 1</li>
+                        <li class="list-group-item">Station 2</li>
+                        <li class="list-group-item">Station 3</li>
+                        <li class="list-group-item">Station 4</li>
+                        <li class="list-group-item">Station 5</li>
+                    </ul>
+                </list>
+            </div>
+        </div>
+        <hr>
+        <footer class="font-weight-light">&copy; 2019 AnsMann</footer>
     </body>
 </html>
