--- a/index.html
+++ b/index.html
@@ -7,22 +7,28 @@
         <title>Code to win with AnsMann</title>
         <link rel="stylesheet" href="css/bootstrap.css">
     </head>
-    <body class="bg-success container">
+    <body class="container-fluid text-dark"
+        background="jj-ying-236821-unsplash.jpg">
         <header class="mb-5 d-flex row p-3">
             <h1 class="flex-grow-1">Ansgar Reimann</h1>
             <div>
-                <a class="mr-3"
-                    href="http://127.0.0.1:5500/index.html#contact">Kontakt</a>
-                <a href="http://127.0.0.1:5500/index.html#aboutme">Biografie</a>
+                <a class="text-dark mr-3"
+                    href="http://127.0.0.1:5500/index.html#contact"><u>Kontakt</u></a>
+                <a class="text-dark"
+                    href="http://127.0.0.1:5500/index.html#aboutme"><u>Biografie</u></a>
             </div>
         </header>
         <div class="row">
             <div class="col-sm">
                 <section id="start" class="mb-3">
-                    <img class="mb-3" src="https://via.placeholder.com/250"
+                    <img class="mb-3 ml-5 img-fluid"
+                        style="max-width:
+                        80%"
+                        src="https://uonnya.sn.files.1drv.com/y4mOi2pzsUlKByyB1nbRfkLwnZcM7e5HLwuymgGs0mE_-71A9u-ArCY-L5R2l04CQfakPDOKw7C2Eg83-OIbnU9rzizAi0bkgraSL4QDHT0K83Vi2N0rM8kOy2iScsm1XQuZgW_nieQFESAulPgnaTZcUoj0x7UJ6Dg4R77GBOC2lPdY02a9qLvQBD618JxarxRKoKi5XuLEbdtBs2WPQgrgw?width=1024&height=682&cropmode=none"
                         alt="Bild
                         von mir">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    <p class="text-justify">Lorem ipsum dolor sit amet
+                        consectetur, adipisicing elit.
                         Animi
                         nulla mollitia obcaecati consequuntur aliquam commodi
                         delectus!
@@ -30,60 +36,54 @@
                         consequuntur delectus sunt, neque numquam soluta?</p>
                 </section>
             </div>
-            <!--durch row ist es nicht gleich eingerückt wie rest-->
+            <!--durch row ist es nicht gleich eingerückt wie rest deshalb ml-2-->
             <div class="col-sm">
                 <h2 id="skills1">Programmierskills</h2>
-                <list class="mb-3 d-flex">
+                <list class="ml-2 mb-3 d-flex">
                     <ul class="row list-group d-flex
                         list-group-horizontal">
                         <li class="badge list-inline-item
-                            list-group-item-primary m-1">Skill
-                            1</li>
+                            list-group-item-dark text- m-1">Markdown</li>
                         <li class="badge list-inline-item
-                            list-group-item-primary m-1">Skill
-                            2</li>
+                            list-group-item-dark text- m-1">Shell</li>
                         <li class="badge list-inline-item
-                            list-group-item-primary m-1">Skill
-                            3</li>
+                            list-group-item-dark text- m-1">HTML</li>
                         <li class="badge list-inline-item
-                            list-group-item-primary m-1">Skill
-                            4</li>
-                        <li class="badge list-group-item-primary
-                            m-1">Skill 5</li>
+                            list-group-item-dark text- m-1">Bootstrap</li>
                     </ul>
                 </list>
-                <h2 id="skills2">Weitere Skills</h2>
-                <list class="mb-3 d-flex">
-                    <ul class="row class list-group list-group-horizontal">
+                <h2 id="skills2">Interessen</h2>
+                <list class="ml-2 mb-3 d-flex">
+                    <ul class="row class list-group
+                        list-group-horizontal">
                         <li class="badge list-inline-item
-                            list-group-item-success m-1">Weiterer
-                            Skill 1</li>
+                            list-group-item-success m-1">Familie</li>
                         <li class="badge list-inline-item
-                            list-group-item-success m-1">Weiterer
-                            Skill 2</li>
+                            list-group-item-success m-1">Sport</li>
                         <li class="badge list-inline-item
-                            list-group-item-success m-1">Weiterer
-                            Skill 3</li>
+                            list-group-item-success m-1">Programmieren</li>
                         <li class="badge list-inline-item
-                            list-group-item-success m-1">Weiterer
-                            Skill 4</li>
+                            list-group-item-success m-1">Technik</li>
                         <li class="badge list-inline-item
-                            list-group-item-success m-1">Weiterer
-                            Skill 5</li>
+                            list-group-item-success m-1">Videospiele</li>
                     </ul>
                 </list>
             </div>
         </div>
-        <section id="contact" class="border border-dark rounded p-2 mb-3">
+        <section id="contact" class="mr-md-5 ml-md-5 border bg-secondary
+            border-dark rounded
+            p-2
+            mb-3">
             <div class="row d-flex justify-content-between">
-                <div class="col-sm col-md-4 text-truncate">
-                    <h3 class="h5">Telefon:</h3>
-                    <div class="mb-2">0151/24062234</div>
+                <div class="col-sm col-lg-4 text-truncate">
+                    <h3 class="h5 text-light">Telefon:</h3>
+                    <a class="mb-2 text-light" href="tel:+4915124062234"><u>0151/24062234</u></a>
                 </div>
-                <div class="col-sm col-md-4 text-truncate">
-                    <h3 class="h5">E-Mail:</h3>
-                    <a href="mailto:ansgar.reimann@protonmail.com">
-                        ansgar.reimann@protonmail.com
+                <div class="col-sm col-lg-4 text-truncate">
+                    <h3 class="h5 text-light">E-Mail:</h3>
+                    <a class="text-light"
+                        href="mailto:ansgar.reimann@protonmail.com">
+                        <u>ansgar.reimann@protonmail.com</u>
                     </a>
                 </div>
             </div>
@@ -109,13 +109,16 @@
             <div class="col-sm">
                 <h2 id="aboutme">About me</h2>
                 <section class="mb-3">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing
+                        elit.
                         Commodi
                         magnam consequatur enim voluptates aliquam magni
                         assumenda,
-                        eligendi suscipit consequuntur repudiandae recusandae
+                        eligendi suscipit consequuntur repudiandae
+                        recusandae
                         quia.
-                        Recusandae esse ex consequuntur earum officia mollitia
+                        Recusandae esse ex consequuntur earum officia
+                        mollitia
                         fugiat.</p>
                 </section>
             </div>
@@ -133,6 +136,6 @@
             </div>
         </div>
         <hr>
-        <footer class="font-weight-light">&copy; 2019 AnsMann</footer>
+        <footer class="font-weight-light"><small>&copy; 2019 AnsMann</small></footer>
     </body>
 </html>
