--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
                     <ul class="row class list-group
                         list-group-horizontal">
                         <li class="badge list-inline-item
-                            list-group-item-success m-1">Familie</li>
+                            list-group-item-light m-1">Familie</li>
                         <li class="badge list-inline-item
-                            list-group-item-success m-1">Sport</li>
+                            list-group-item-light m-1">Sport</li>
                         <li class="badge list-inline-item
-                            list-group-item-success m-1">Programmieren</li>
+                            list-group-item-light m-1">Programmieren</li>
                         <li class="badge list-inline-item
-                            list-group-item-success m-1">Technik</li>
+                            list-group-item-light m-1">Technik</li>
                         <li class="badge list-inline-item
-                            list-group-item-success m-1">Videospiele</li>
+                            list-group-item-light m-1">Videospiele</li>
                     </ul>
                 </list>
             </div>
@@ -88,21 +88,31 @@
                 </div>
             </div>
         </section>
+        <header class="h3 d-flex justify-content-center">Finde me on</header>
         <section id="teaser" class="d-flex justify-content-around row
             mb-3 p-3">
             <figure>
-                <a href="https://google.com"><img
-                        src="https://via.placeholder.com/200"
-                        alt="github"></a>
-                <figcaption><a href="#">See my GitHub</a></figcaption>
+                <a href="https://github.com/AnsMann/"><img class="mb-1"
+                        src="GitHub-Mark-120px-plus.png"
+                        alt="github logo"></a>
+                <figcaption class="d-flex justify-content-center"><a
+                        class="text-dark"
+                        href="https://github.com/AnsMann/">GitHub</a></figcaption>
             </figure>
-            <figure><a href="#"><img src="https://via.placeholder.com/200"
-                        alt="Codepen"></a>
-                <figcaption><a href="#">See my CodePen</a></figcaption>
+            <figure><a href="https://codepen.io/ansmann/"><img class="mb-1"
+                        src="codepen-logo.png"
+                        alt="Codepen logo" style="max-width: 120px"></a>
+                <figcaption class="d-flex justify-content-center"><a
+                        class="text-dark"
+                        href="https://codepen.io/ansmann/">CodePen</a></figcaption>
             </figure>
-            <figure><a href="#"><img src="https://via.placeholder.com/200"
-                        alt="LinkedIn"></a>
-                <figcaption><a href="#">See my LinkedIn</a></figcaption>
+            <figure><a href="https://www.xing.com/profile/Ansgar_Reimann"><img
+                        class="mb-1"
+                        src="xing-logo-black-white.png"
+                        alt="XING" style="max-width: 120px"></a>
+                <figcaption class="d-flex justify-content-center"><a
+                        class="text-dark"
+                        href="https://www.xing.com/profile/Ansgar_Reimann">XING</a></figcaption>
             </figure>
         </section>
         <div class="row">
