--- a/index.html
+++ b/index.html
@@ -9,14 +9,22 @@
     </head>
     <body class="container-fluid text-dark"
         background="jj-ying-236821-unsplash.jpg">
-        <header class="mb-5 d-flex row p-3">
+        <header id="home" class="mb-5 d-flex row p-3">
             <h1 class="flex-grow-1">Ansgar Reimann</h1>
-            <div>
-                <a class="text-dark mr-3"
-                    href="http://127.0.0.1:5500/index.html#contact"><u>Kontakt</u></a>
-                <a class="text-dark"
-                    href="http://127.0.0.1:5500/index.html#aboutme"><u>Biografie</u></a>
-            </div>
+            <ul class="nav nav-pills ustify-content-end">
+                <li class="nav-item">
+                    <a class="nav-link active bg-dark text-white"
+                        href="http://127.0.0.1:5500/index.html#home">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark"
+                        href="http://127.0.0.1:5500/index.html#contact">Kontakt</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark"
+                        href="http://127.0.0.1:5500/index.html#aboutme">Biografie</a>
+                </li>
+            </ul>
         </header>
         <div class="row">
             <div class="col-sm">
@@ -72,20 +80,18 @@
         </div>
         <section id="contact" class="mr-md-5 ml-md-5 border bg-secondary
             border-dark rounded
-            p-2
+            p-3
             mb-3">
-            <div class="row d-flex justify-content-between">
-                <div class="col-sm col-lg-4 text-truncate">
-                    <h3 class="h5 text-light">Telefon:</h3>
-                    <a class="mb-2 text-light" href="tel:+4915124062234"><u>0151/24062234</u></a>
-                </div>
-                <div class="col-sm col-lg-4 text-truncate">
-                    <h3 class="h5 text-light">E-Mail:</h3>
-                    <a class="text-light"
-                        href="mailto:ansgar.reimann@protonmail.com">
-                        <u>ansgar.reimann@protonmail.com</u>
-                    </a>
-                </div>
+            <div class="d-sm-flex justify-content-between text-truncate">
+                <h3 class="d-none d-sm-inline h5 text-light">Contact me:</h3>
+                <h3 class="h5 text-light d-sm-none">Phone</h3>
+                <a class="text-light d-flex justify-content-start"
+                    href="tel:+4915124062234"><u>0151/24062234</u></a>
+                <h3 class="mt-3 h5 text-light d-sm-none">E-Mail</h3>
+                <a class="text-light"
+                    href="mailto:ansgar.reimann@protonmail.com">
+                    <u>ansgar.reimann@protonmail.com</u>
+                </a>
             </div>
         </section>
         <header class="h3 d-flex justify-content-center">Finde me on</header>
@@ -146,6 +152,41 @@
             </div>
         </div>
         <hr>
+        <p>
+            <a class="btn btn-primary" data-toggle="collapse"
+                href="#multiCollapseExample1" role="button"
+                aria-expanded="false" aria-controls="multiCollapseExample1">Toggle
+                first element</a>
+            <button class="btn btn-primary" type="button" data-toggle="collapse"
+                data-target="#multiCollapseExample2" aria-expanded="false"
+                aria-controls="multiCollapseExample2">Toggle second element</button>
+            <button class="btn btn-primary" type="button" data-toggle="collapse"
+                data-target=".multi-collapse" aria-expanded="false"
+                aria-controls="multiCollapseExample1 multiCollapseExample2">Toggle
+                both elements</button>
+        </p>
+        <div class="row">
+            <div class="col">
+                <div class="collapse multi-collapse" id="multiCollapseExample1">
+                    <div class="card card-body">
+                        Anim pariatur cliche reprehenderit, enim eiusmod high
+                        life accusamus terry richardson ad squid. Nihil anim
+                        keffiyeh helvetica, craft beer labore wes anderson cred
+                        nesciunt sapiente ea proident.
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="collapse multi-collapse" id="multiCollapseExample2">
+                    <div class="card card-body">
+                        Anim pariatur cliche reprehenderit, enim eiusmod high
+                        life accusamus terry richardson ad squid. Nihil anim
+                        keffiyeh helvetica, craft beer labore wes anderson cred
+                        nesciunt sapiente ea proident.
+                    </div>
+                </div>
+            </div>
+        </div>
         <footer class="font-weight-light"><small>&copy; 2019 AnsMann</small></footer>
     </body>
 </html>
